config/Code - OSS/logs/20231002T062802/window1/exthost/output_logging_20231002T062803/1-Code.log
[Running] cd "/home/Luna/programing/study/rust/" && rustc test.rs && "/home/Luna/programing/study/rust/"test
error: macro expansion ignores token `{` and any following
 --> /rustc/d5c2e9c342b358556da91d61ed4133f6f50fc0c3/library/std/src/macros.rs:136:23
  |
 ::: test.rs:1:1
  |
1 | println!("Hello world");
  | ----------------------- caused by the macro expansion here
  |
  = note: the usage of `println!` is likely invalid in item context

error[E0601]: `main` function not found in crate `test`
 --> test.rs:1:25
  |
1 | println!("Hello world");
  |                         ^ consider adding a `main` function to `test.rs`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0601`.

[Done] exited with code=1 in 0.28 seconds

